--- a/.gitignore
+++ b/.gitignore
@@ -128,9 +128,18 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
+
+# Ignore VS Code settings
+.vscode/
+
 # yarn v2
 .yarn/cache
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+
+# Ignore system files
+.DS_Store
+Thumbs.db
